syntax = "proto3";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message Reaction {
    string actor = 1 [json_name="actor", (gogoproto.jsontag)="actor"];
    string reaction = 2 [json_name="reaction", (gogoproto.jsontag)="reaction"];
    int64 reaction_id = 3 [json_name="reaction_id", (gogoproto.jsontag)="reaction_id"];
    int64 timestamp = 4 [json_name="timestamp", (gogoproto.jsontag)="timestamp"];
    string title = 5 [json_name="title", (gogoproto.jsontag)="title"];
}

message ReactionsResponse {
    repeated Reaction result = 1 [json_name="result", (gogoproto.jsontag)="result"];
}